--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # What's the name of the church?
-title: Victory Baptist Church
+title: New Hebron Baptist Church
 # Give a brief description of the church
 description: > # this means to ignore newlines until "baseurl:"
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus blanditiis odio corrupti, 
